--- a/html.html
+++ b/html.html
@@ -39,8 +39,46 @@
     <div class="header2">
         <div class="welcome">Welcome to the World of</div>
         <div class="bigRuneScape">RuneScape</div>
-        <div class="arrowthing">logoxd</div>
+        <div class="arrowthing">
+            <img class="arrow" src="./media/underline.png">
+        </div>
 
+    </div>
+    <div class="mid-mid">
+        <div class="toptextleft">A classic adventure, reborn</div>
+        <div class="leftbox">
+            <a href="https://play.runescape.com/runescape">
+                <div class="picture">
+                    <img class="a360gif" src="./media/runescape-360giph.gif">
+                    <img class="currentlogo" src="./media/runescape-rs3-2.png">
+                </div>
+            </a>
+
+        </div>
+        <div class="toptextright">Gielinor, like it used to be</div>
+        <div class="rightbox">
+            <a href="https://play.runescape.com/oldschool">
+                <div class="picture">
+                    <img class="adiff360gif" src="./media/runescape-360giph.gif">
+                    <img class="currentlogoright" src="./media/runescape-Oldschool.png">
+                </div>
+            </a>
+
+        </div>
+    </div>
+    <div class="buttons">
+        <a href="https://play.runescape.com/runescape">
+            <button class="t1">find out more</button>
+        </a>
+        <a href="https://play.runescape.com/oldschool">
+            <button class="t2">find out more</button>
+        </a>
+        <a href="https://secure.runescape.com/m=account-creation/create_account?theme=runescape#ja_sid=d3c7d372-67c1-42ef-a3c3-7ea1efdbeed7">
+            <button class="t3">play now free</button>
+        </a>
+        <a href="https://secure.runescape.com/m=account-creation/create_account?theme=oldschool#ja_sid=d3c7d372-67c1-42ef-a3c3-7ea1efdbeed7">
+            <button class="t4">play now free</button>
+        </a>
     </div>
 
 
