final version of RuneScape clone

--- a/html.html
+++ b/html.html
@@ -53,7 +53,6 @@
                     <img class="currentlogo" src="./media/runescape-rs3-2.png">
                 </div>
             </a>
-
         </div>
         <div class="toptextright">Gielinor, like it used to be</div>
         <div class="rightbox">
@@ -73,15 +72,49 @@
         <a href="https://play.runescape.com/oldschool">
             <button class="t2">find out more</button>
         </a>
-        <a href="https://secure.runescape.com/m=account-creation/create_account?theme=runescape#ja_sid=d3c7d372-67c1-42ef-a3c3-7ea1efdbeed7">
+        <a
+            href="https://secure.runescape.com/m=account-creation/create_account?theme=runescape#ja_sid=d3c7d372-67c1-42ef-a3c3-7ea1efdbeed7">
             <button class="t3">play now free</button>
         </a>
-        <a href="https://secure.runescape.com/m=account-creation/create_account?theme=oldschool#ja_sid=d3c7d372-67c1-42ef-a3c3-7ea1efdbeed7">
+        <a
+            href="https://secure.runescape.com/m=account-creation/create_account?theme=oldschool#ja_sid=d3c7d372-67c1-42ef-a3c3-7ea1efdbeed7">
             <button class="t4">play now free</button>
         </a>
     </div>
-
-
+    <div class="abovefootertext">
+        <a>haven't played in a while?
+        </a>
+        <a href="https://play.runescape.com/returning-players">
+            <button class="t5">get back in the game</button>
+        </a>
+    </div>
 </body>
+<footer>
+    <div class="jagex">
+        <a href="https://www.jagex.com/en-GB/">
+            <img class="jagexlogo" src="media/jagex-logo.jpg"> </a>
+    </div>
+    <div class="termlinks">
+        <div>
+            <a href="https://www.jagex.com/en-GB/terms">Terms & Conditions</a>
+        </div>
+        <div>
+            <a href="https://www.jagex.com/en-GB/terms/privacy">Privacy Policy</a>
+        </div>
+        <div>
+            <a href="https://www.jagex.com/en-GB/terms/cookies">Cookies Policy</a>
+        </div>
+        <div>
+            <a href="https://www.jagex.com/en-GB/">Jagex Ltd.</a>
+        </div>
+    </div>
+    <div class="copyright"></div>
+    <div class="picturelinks">
+        <a
+            href="https://pegi.info/search-pegi?q=runescape&op=Search&age%5B%5D=&descriptor%5B%5D=&publisher=Jagex+Ltd&platform%5B%5D=&release_year%5B%5D=&page=1&form_build_id=form-5Nc7D2ScBDuiMzP9F2ffxljtiSLFY38thQpDSDwRrq0&form_id=pegi_search_form">
+            <img class="peggy" src="media/peggy.png">
+        </a>
+    </div>
+</footer>
 
 </html>
